fixed styles for phonegap. added showSearchBar functionality to toolbar

--- a/src/app/recipe/recipe.css
+++ b/src/app/recipe/recipe.css
@@ -5,7 +5,7 @@
 
 .recipe-gallery .recipe-thumb{
   width: 100%;
-  height: 100px;
+  min-height: 100px;
   padding: 0;
   margin-bottom: 10px;
 }
@@ -25,6 +25,7 @@
   margin-bottom: 15px;
   margin-top: 5px;
   width: 85%;
+  min-height: 10px;
 }
 
 .recipe-text{
@@ -33,5 +34,10 @@
 }
 
 .recipe-text h1, .recipe-text p{
-  margin: 5px;
+  margin: 5px 5px 15px 5px;
+  /*min-height: 35px;*/
+}
+
+.recipe-text p{
+  margin-bottom: 30px;
 }
